# ComfyUI-GoogleDrive-Downloader

./: .gitignore  README.md  __init__.py  google_drive_downloader.py  install.py  node_list.json  pyproject.toml  requirements.txt
web/: google_drive_downloader.js
